k8s/hello-world-app/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hello-world
  labels:
    name: hello-world
    app.kubernetes.io/managed-by: argocd
