k8s/hello-world-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-service
  namespace: hello-world
  labels:
    app: hello-world-app
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 5000
    protocol: TCP
    name: http
  selector:
    app: hello-world-app
